# spc-outlook-discord-bot

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_bot.ps1  run_bot.sh  spc_outlook_bot.py
.github/workflows/: ci.yml
assets/: README.md
deploy/: spc-outlook-bot.service.example
docs/proof/: README.md  index.html
docs/proof/assets/day1/: metadata.json
docs/proof/assets/day2/: metadata.json
docs/proof/assets/day3/: metadata.json
docs/proof/assets/day4-8/: metadata.json
tests/: test_spc_outlook_bot.py
tools/: build_latest_plots_page.py  validate_categorical_stacking.py  validate_day1_archive.py  validate_pts_archive.py
