[project]
name = "spc-outlook-discord-bot"
version = "0.1.0"
description = "Post fast unofficial severe-weather outlook map bundles to Discord from NOAA/NWS SPC geometry."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "FahrenheitResearch" }
]
keywords = ["weather", "spc", "nws", "discord", "nwws"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  "cartopy>=0.25",
  "matplotlib>=3.10",
  "pyshp>=2.3",
  "shapely>=2.1",
]

[project.urls]
Homepage = "https://github.com/FahrenheitResearch/spc-outlook-discord-bot"
Issues = "https://github.com/FahrenheitResearch/spc-outlook-discord-bot/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
